syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "KeyManagerGrpc";
option objc_class_prefix = "HLW";

package br.com.zup.edu;

service KeyManagerGrpcService {
  rpc registrar (KeyManagerRequest) returns (KeyManagerResponse) {}
}


service KeyManagerRemoveService {
  rpc remover (DeletePixKeyRequest) returns (DeletePixKeyResponse){}
}


service KeyManagerShowService{
  rpc listar(ShowPixKeyRequest) returns (ShowPixKeyResponse){}
}

service KeyManagerShowAllService{
  rpc all(ShowAllPixKeyRequest) returns (ShowAllPixKeyResponse){}
}

enum TipoChave {
  CHAVE_DESCONHECIDA = 0;
  CPF = 1;
  TELEFONE = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

enum TipoConta {
  CONTA_DESCONHECIDA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;

}
message KeyManagerRequest {
  string clienteId = 1;
  TipoChave tipoChave = 2;
  string chave = 3;
  TipoConta tipoConta = 4;
}

message KeyManagerResponse {
  string pixId = 1;
}

message DeletePixKeyRequest{
  string pixId = 1;
  string clientId = 2;
}

message DeletePixKeyResponse{
  string message = 1;
}

message ShowPixKeyRequest{
  message PixIdFilter{
    string clienteId = 1;
    string pixId = 2;
  }

  oneof filter{
    PixIdFilter pixId = 1;
    string chavePix = 2;
  }

}

message ShowPixKeyResponse{
  message ChavePix {

    message MostrarPixResponse {
      TipoConta tipo = 1;
      string instituicao = 2;
      string titular = 3;
      string cpf  = 4;
      string agencia = 5;
      string numeroDaConta = 6;
    }

    TipoChave tipo = 1;
    string chave = 2;
    MostrarPixResponse conta = 3;
    string criadaEm = 4;
  }

  string clienteId = 1;
  string pixId     = 2;
  ChavePix chave   = 3;
}

message ShowAllPixKeyRequest{
  string clienteId = 1;
}

message ShowAllPixKeyResponse{

  string clienteId = 1;
  repeated ChavePix chavePix = 2;

  message ChavePix{
    string pixId = 1;
    TipoChave tipoChave = 2;
    string chave = 3;
    TipoConta tipoConta = 4;
    string createdAt = 5;
  }

}
